backend-unboxed/server.log
file:///C:/Users/brady/Desktop/8-2-25/8-5-25%20Working%20File%20-%20Copy/backend/data/comprehensive_chemical_database.js:16634
  '123-45-6': { // AUTO-DISCOVERED - NEEDS REVIEW
  ^^^^^^^^^^

SyntaxError: Unexpected string
    at compileSourceTextModule (node:internal/modules/esm/utils:340:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:146:18)
    at #translate (node:internal/modules/esm/loader:431:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:478:27)

Node.js v20.19.2
